# ProteinLM-Bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: example_mutations.csv
notebooks/: 01_exploratory_analysis.ipynb
scripts/: download_example_data.py  run_benchmark.py
src/proteinlm_bench/: __init__.py  data.py  embeddings.py  epistasis.py  metrics.py  models.py  plotting.py  utils.py
tests/: conftest.py  test_data.py  test_epistasis.py  test_metrics.py
